# eosio-keygen-extras

./: CMakeLists.txt  LICENSE  README.md  config.json  debian-deps.sh  update-dict.sh
.github/workflows/: package.yml
dict/: danish  english  french
